Fix wiregiard vpn configs

--- a/roles/k8s_test_wg/templates/wg0.conf.j2
+++ b/roles/k8s_test_wg/templates/wg0.conf.j2
@@ -5,4 +5,4 @@ Address = 10.0.0.6/24
 [Peer]
 PublicKey = SERVER_PUBLIC_KEY
 Endpoint = SERVER_IP_ADDRESS:51820
-AllowedIPs = 0.0.0.0/0, ::/0
+AllowedIPs = 10.0.0.0/24
